[package]
name = "thermidor"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }